fix footer text alignment on mobile [#130912935]

--- a/_sass/app/components/_footer.scss
+++ b/_sass/app/components/_footer.scss
@@ -1,5 +1,10 @@
 .c-footer {
   padding: 50px 0;
+  text-align: center;
+
+  @media #{$md-up} {
+    text-align: left;
+  }
 
   a {
     @include text($fs-1, $fw-normal, $dark-color);
